--- a/gathering_the_magic/public/css/style.css
+++ b/gathering_the_magic/public/css/style.css
@@ -6,18 +6,13 @@ h1 {
 }
 
 body {
+    padding-left: 10px;
+    padding-right: 5px;
     background-color: whitesmoke;
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
     background-attachment: fixed;
-}
-
-.auth {
-    border: 1px solid;
-    color: whitesmoke;
-    border-radius: 2px;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .sub {
@@ -33,7 +28,7 @@ nav {
 }
 
 /* Navbar links */
-nav a {
+nav #nav-text{
     float: left;
     display: block;
     color: whitesmoke;
@@ -43,15 +38,9 @@ nav a {
 }
 
 /* Links - change color on hover */
-nav a:hover {
-    background-color: #ddd;
+nav #nav-text:hover {
+    background-color: whitesmoke;
     color: black;
-}
-
-.wrapper {
-    display: flex;
-    grid-gap: 10px;
-    justify-content: center;
 }
 
 form {
@@ -60,13 +49,26 @@ form {
     flex-direction: column;
     align-items: left;
     justify-content: space-around;
+    margin-top: 1%;
+    margin-left: 15%;
+}
+
+
+.about_text {
+    vertical-align: top;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-around;
     margin-bottom: 20px;
     margin-left: 15%;
     margin-right: 15%;
+    color: whitesmoke;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 form label#color {
-    margin-left: 5%;
+    margin-left: 6%;
 }
 
 form label#title {
@@ -74,13 +76,9 @@ form label#title {
     font-size: medium;
 }
 
-form label {
-    margin-top: 5px;
-}
 
 #btnSubmit {
     align-items: center;
-
 }
 
 input[type=submit] {
@@ -89,24 +87,10 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-top: 5px;
 }
 
 
-.wrapper {
-    align-items: left;
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-
-}
-
-.wrapper select {
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-#test {
+#card_img {
     align-items: left;
     display: flex;
     flex-direction: row;
@@ -116,35 +100,14 @@ input[type=submit] {
 
 }
 
-#test1 {
-    color: #333;
-    margin-left: 5%;
-}
-
-#test1 label {
-    color: #333;
+.card-text{
     font-weight: bold;
     font-size: medium;
 }
-
-#description {
-    white-space: normal;
-    text-align: left;
-
+.card-text *{
+    font-weight: normal;
 }
-
 .card_name {
     text-decoration: none;
 }
 
-.div-wrapper {
-    position: relative;
-    height: 300px;
-    width: 300px;
-}
-
-.div-wrapper img {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-}
